# OpenFRET

./: README.md  fret_data.json  openFRET.yaml
cpp/: openfret.cpp
matlab/: main.m  openfret.m
python/: LICENSE  README.md  acceptor_traces.csv  donor_traces.csv  fret_data.json  openfret.py  pyproject.toml  read_csv_write_openfret_example.py  read_openfret_example.py  setup.py  write_openfret_example.py
python/examples/: OpenFRET_Example.ipynb  README.md  load_csv.py  write_openfret_example.py
python/fret_data_csv/condition_A/: S1103gr000.tif-pairProfile1020.csv  S1103gr000.tif-pairProfile1031.csv  S1103gr000.tif-pairProfile1037.csv  S1103gr000.tif-pairProfile669.csv  S1103gr000.tif-pairProfile818.csv  S1103gr000.tif-pairProfile992.csv
python/fret_data_csv/condition_B/: S1103gr000.tif-pairProfile1093.csv  S1103gr000.tif-pairProfile1103.csv  S1103gr000.tif-pairProfile1121.csv  S1103gr000.tif-pairProfile456.csv  S1103gr000.tif-pairProfile900.csv
python/openfret/: __init__.py  load_csv.py  openfret.py
python/tests/: test_openfret.py
typescript/: openfret.ts
