[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfret"
version = "0.1.1"
description = "A standardized format for single-molecule FRET data"
readme = "README.md"
authors = [{ name = "Jieming Li", email = "jmli@umich.edu" }, { name = "Leyou Zhang", email = "leyou@umich.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dependencies = [
]
[project.urls]
"Homepage" = "https://github.com/simol-lab/OpenFRET"
"Bug Tracker" = "https://github.com/simol-lab/OpenFRET/issues"

[tool.setuptools]
packages = ["openfret"] # Automatically find packages